# OpenCV4QuickStartGuide

./: .md  CMakeLists.txt  README.md  main.cpp
chapter1/: CMakeLists.txt  chapter1.cpp  installTest.cpp
chapter10/: CMakeLists.txt  myCalibrateCamera.cpp  myChessboard.cpp  myHomogeneous.cpp  myPnpAndRansac.cpp  myProjectPoints.cpp  myStereoCalibrate.cpp  myStereoRectify.cpp  myUndistortion.cpp
chapter11/: CMakeLists.txt  myAbsdiff.cpp  myCalcOpticalFlowFarneback.cpp  myCalcOpticalFlowPyrLK.cpp  myCamShift.cpp  myMeanShift.cpp
chapter12/: CMakeLists.txt  myDTrees.cpp  myGenderDetect.cpp  myImagePattern.cpp  myKMeanImage.cpp  myKMeanPoints.cpp  myKNearestTest.cpp  myKNearestTrain.cpp  myNeuralStyle.cpp  myRTrees.cpp  myReadNet.cpp  mySVM.cpp
chapter2/: CMakeLists.txt  ImgWriter.cpp  VideoCapture.cpp  VideoWriter.cpp  myXMLandYAML.cpp  myXMLandYMAL.cpp
chapter3/: CMakeLists.txt  myConcat.cpp  myCreateTrackbar.cpp  myCvColor.cpp  myDeepShallowcopy.cpp  myFlip.cpp  myLUT.cpp  myLogicOperation.cpp  myMaxAndMin.cpp  myMeanAndmearStdDev.cpp  myMouse.cpp  myPlot.cpp  myPyramid.cpp  myResize.cpp  mySplitAndMerge.cpp  myThreshold.cpp  myWarpAffine.cpp  myWarpPerspective.cpp  myfindMinAndMax.cpp  mywarpPolar.cpp
chapter4/: CMakeLists.txt  myCalHist.cpp  myCalcBackProject.cpp  myCompareHist.cpp  myEqualizeHist.cpp  myHistMatch.cpp  myMatchTemplate.cpp  myNormalize.cpp
chapter5/: CMakeLists.txt  myBilateralFilter.cpp  myBlur.cpp  myBoxFilter.cpp  myCanny.cpp  myEdge.cpp  myFilter.cpp  myGaussNoise.cpp  myGaussianBlur.cpp  myGetDerivKernels.cpp  myLaplacian.cpp  myMedianBlur.cpp  mySaltAndPepper.cpp  myScharr.cpp  mySobel.cpp  myselfFilter.cpp
chapter6/: CMakeLists.txt  myConnectedComponents.cpp  myConnectedComponentsWithStats.cpp  myDilate.cpp  myDistanceTransform.cpp  myErode.cpp  myMorphologyApp.cpp  myThinning.cpp
chapter7/: CMakeLists.txt  myApproxPolyDP.cpp  myArcLength.cpp  myContourArea.cpp  myContours.cpp  myConvexHull.cpp  myFitLine.cpp  myHoughCircles.cpp  myHoughLines.cpp  myHoughLinesP.cpp  myHoughLinesPointSet.cpp  myHuMoments.cpp  myMatchShapes.cpp  myMoments.cpp  myPointPolygonTest.cpp  myRect.cpp  myTriangleAndCircle.cpp  mydetectQRcode.cpp
chapter8/: CMakeLists.txt  myDct.cpp  myFloodfill.cpp  myGrabCut.cpp  myInpaint.cpp  myIntegral.cpp  myMulSpectrums.cpp  myPyrMeanShiftFiltering.cpp  myWatershed.cpp  mydft.cpp
chapter9/: CMakeLists.txt  myCornerHarris.cpp  myCornerSubPix.cpp  myDrawKeypoint.cpp  myGoodFeaturesToTrack.cpp  myORB.cpp  myOrbMatch.cpp  myOrbMatchFlann.cpp  myOrbMatchRANSAC.cpp  mySURF.cpp
data/chapter2/: datas.yaml
