add_executable(myCvColor myCvColor.cpp)
target_link_libraries(myCvColor ${LIBS})

add_executable(mySplitAndMerge mySplitAndMerge.cpp)
target_link_libraries(mySplitAndMerge ${LIBS})

add_executable(myfindMinAndMax myfindMinAndMax.cpp)
target_link_libraries(myfindMinAndMax ${LIBS})

add_executable(myMeanAndmearStdDev myMeanAndmearStdDev.cpp)
target_link_libraries(myMeanAndmearStdDev ${LIBS})

add_executable(myMaxAndMin myMaxAndMin.cpp)
target_link_libraries(myMaxAndMin ${LIBS})

add_executable(myLogicOperation myLogicOperation.cpp)
target_link_libraries(myLogicOperation ${LIBS})

add_executable(myThreshold myThreshold.cpp)
target_link_libraries(myThreshold ${LIBS})

add_executable(myLUT myLUT.cpp)
target_link_libraries(myLUT ${LIBS})

add_executable(myConcat myConcat.cpp)
target_link_libraries(myConcat ${LIBS})

add_executable(myResize myResize.cpp)
target_link_libraries(myResize ${LIBS})

add_executable(myFlip myFlip.cpp)
target_link_libraries(myFlip ${LIBS})

add_executable(myWarpAffine myWarpAffine.cpp)
target_link_libraries(myWarpAffine ${LIBS})

add_executable(myWarpPerspective myWarpPerspective.cpp)
target_link_libraries(myWarpPerspective ${LIBS})

add_executable(mywarpPolar mywarpPolar.cpp)
target_link_libraries(mywarpPolar ${LIBS})

add_executable(myPlot myPlot.cpp)
target_link_libraries(myPlot ${LIBS})

add_executable(myDeepShallowcopy myDeepShallowcopy.cpp)
target_link_libraries(myDeepShallowcopy ${LIBS})

add_executable(myPyramid myPyramid.cpp)
target_link_libraries(myPyramid ${LIBS})

add_executable(myCreateTrackbar myCreateTrackbar.cpp)
target_link_libraries(myCreateTrackbar ${LIBS})

add_executable(myMouse myMouse.cpp)
target_link_libraries(myMouse ${LIBS})