add_executable(myHoughLines myHoughLines.cpp)
target_link_libraries(myHoughLines ${LIBS})

add_executable(myHoughLinesP myHoughLinesP.cpp)
target_link_libraries(myHoughLinesP ${LIBS})

add_executable(myHoughLinesPointSet myHoughLinesPointSet.cpp)
target_link_libraries(myHoughLinesPointSet ${LIBS})

add_executable(myFitLine myFitLine.cpp)
target_link_libraries(myFitLine ${LIBS})

add_executable(myHoughCircles myHoughCircles.cpp)
target_link_libraries(myHoughCircles ${LIBS})

add_executable(myContours myContours.cpp)
target_link_libraries(myContours ${LIBS})

add_executable(myContourArea myContourArea.cpp)
target_link_libraries(myContourArea ${LIBS})

add_executable(myArcLength myArcLength.cpp)
target_link_libraries(myArcLength ${LIBS})

add_executable(myRect myRect.cpp)
target_link_libraries(myRect ${LIBS})

add_executable(myApproxPolyDP myApproxPolyDP.cpp)
target_link_libraries(myApproxPolyDP ${LIBS})

add_executable(myPointPolygonTest myPointPolygonTest.cpp)
target_link_libraries(myPointPolygonTest ${LIBS})

add_executable(myConvexHull myConvexHull.cpp)
target_link_libraries(myConvexHull ${LIBS})

add_executable(myMoments myMoments.cpp)
target_link_libraries(myMoments ${LIBS})

add_executable(myHuMoments myHuMoments.cpp)
target_link_libraries(myHuMoments ${LIBS})

add_executable(myMatchShapes myMatchShapes.cpp)
target_link_libraries(myMatchShapes ${LIBS})

add_executable(myTriangleAndCircle myTriangleAndCircle.cpp)
target_link_libraries(myTriangleAndCircle ${LIBS})

add_executable(mydetectQRcode mydetectQRcode.cpp)
target_link_libraries(mydetectQRcode ${LIBS})


